开发首页主要内容

--- a/dev/css/style-index.css
+++ b/dev/css/style-index.css
@@ -559,6 +559,14 @@ dd {
   text-align: center;
 }
 
+.text-left {
+  text-align: left;
+}
+
+.text-right {
+  text-align: right;
+}
+
 .pos-r {
   position: relative;
 }
@@ -594,7 +602,19 @@ dd {
 }
 
 #link-defalt .main-footer {
-  display: block;
+  color: #ffffff;
+}
+
+#link-defalt .main-footer:hover {
+  font-size: 16px;
+}
+
+#link-defalt .toRed {
+  color: #ffffff;
+}
+
+#link-defalt .toRed:hover {
+  color: #d33331;
 }
 
 #header {
@@ -621,6 +641,11 @@ dd {
 
 #header #logo a {
   display: block;
+}
+
+#header #logo a ins {
+  text-indent: -99999px;
+  display: inline-block;
 }
 
 #header #navBar {
@@ -701,6 +726,7 @@ dd {
 }
 
 #header #navBar li .sub li a:hover {
+  padding-left: 5px;
   border-left: 1px solid #da271b;
   border-left-width: 3px;
   background: #f8f8f8;
@@ -761,6 +787,10 @@ dd {
   color: #ffffff;
 }
 
+#main-footer .btm-nav dd a:hover {
+  font-size: 16px;
+}
+
 #main-footer .btm-contact {
   text-align: center;
   padding-top: 50px;
@@ -775,8 +805,12 @@ dd {
 }
 
 #main-footer .btm-contact li a {
-  color: #ffffff;
   padding-left: 30px;
+  color: #ffffff;
+}
+
+#main-footer .btm-contact li a:hover {
+  color: #d33331;
 }
 
 #main-footer .btm-contact li a:before {
@@ -791,22 +825,218 @@ dd {
 #main-footer .btm-contact li a.fb:before {
   width: 48px;
   left: -25px;
-  background: url("../img/icon-index.png") no-repeat -143px -555px;
+  background: url("../../img/icon-1.png") no-repeat -295px -152px;
 }
 
 #main-footer .btm-contact li a.qq:before {
-  background: url("../img/icon-index.png") no-repeat -91px -555px;
+  background: url("../../img/icon-1.png") no-repeat -243px -152px;
 }
 
 #main-footer .btm-contact li a.tel:before {
-  background: url("../img/icon-index.png") no-repeat -117px -555px;
+  background: url("../../img/icon-1.png") no-repeat -269px -152px;
 }
 
 #main-footer .btm-contact li a.wechat:before {
   width: 30px;
-  background: url("../img/icon-index.png") no-repeat 0 -557px;
+  background: url("../../img/icon-1.png") no-repeat -434px -54px;
 }
 
 #main-footer .btm-copyright {
   font-size: 14px;
+}
+
+.wrap {
+  padding-top: 120px;
+  padding-bottom: 120px;
+  height: auto;
+}
+
+.wrap .title figcaption {
+  font-size: 28px;
+  font-family: "微软雅黑";
+  font-style: normal;
+  font-weight: 400;
+}
+
+.wrap .more {
+  display: inline-block;
+}
+
+.wrap .more:after {
+  content: "";
+  float: right;
+  margin-top: 4px;
+  margin-left: 5px;
+  color: #333333;
+  background: url("../img/icon-1.png") no-repeat -474px -26px;
+  display: inline-block;
+  width: 14px;
+  height: 14px;
+}
+
+.wrap .more:hover:after {
+  background: url("../img/icon-1.png") no-repeat -474px 0;
+}
+
+#service {
+  background-color: #f8f8f8;
+}
+
+#service dl,
+#service li {
+  float: left;
+  margin-right: 0;
+}
+
+#service .service-list {
+  position: relative;
+  padding: 40px 0;
+  overflow: hidden;
+  height: auto;
+}
+
+#service .service-list:before {
+  content: "";
+  background: #e1e1e1;
+  width: 2px;
+  height: 58px;
+  position: absolute;
+  top: 80px;
+  left: 0;
+}
+
+#service .service-list:after {
+  content: "";
+  background: #e1e1e1;
+  width: 2px;
+  height: 58px;
+  position: absolute;
+  top: 80px;
+  right: 0;
+}
+
+#service .service-list li {
+  position: relative;
+  width: 25%;
+}
+
+#service .service-list li .box {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+#service .service-list li .box span:first-child {
+  margin: auto;
+  border-radius: 50%;
+  padding: 10px;
+  display: block;
+  width: 100px;
+  height: 100px;
+}
+
+#service .service-list li .box a {
+  margin: auto;
+  position: relative;
+  display: block;
+  width: 100px;
+  height: 100px;
+}
+
+#service .service-list li .box strong {
+  display: block;
+  line-height: 60px;
+}
+
+#service .service-list li:not(:last-of-type):after {
+  content: "";
+  background: #e1e1e1;
+  width: 2px;
+  height: 58px;
+  position: absolute;
+  top: 40px;
+  right: 0;
+}
+
+#service .service-list li:nth-of-type(1) a:after {
+  content: "";
+  position: absolute;
+  margin-top: -28px;
+  margin-left: -28px;
+  top: 50%;
+  left: 50%;
+  width: 56px;
+  height: 56px;
+  background: url("../img/icon-1.png") no-repeat -232px -94px;
+}
+
+#service .service-list li:nth-of-type(2) a:after {
+  content: "";
+  position: absolute;
+  margin-top: -28px;
+  margin-left: -28px;
+  top: 50%;
+  left: 50%;
+  width: 56px;
+  height: 56px;
+  background: url("../img/icon-1.png") no-repeat -290px -94px;
+}
+
+#service .service-list li:nth-of-type(3) a:after {
+  content: "";
+  position: absolute;
+  margin-top: -28px;
+  margin-left: -28px;
+  top: 50%;
+  left: 50%;
+  width: 56px;
+  height: 56px;
+  background: url("../img/icon-1.png") no-repeat 0px -94px;
+}
+
+#service .service-list li:nth-of-type(4) a:after {
+  content: "";
+  position: absolute;
+  margin-top: -28px;
+  margin-left: -28px;
+  top: 50%;
+  left: 50%;
+  width: 56px;
+  height: 56px;
+  background: url("../img/icon-1.png") no-repeat -348px -58px;
+}
+
+#service .service-list li:hover a {
+  border-radius: 50%;
+}
+
+#service .service-list li:nth-of-type(1):hover a {
+  background-color: #f6ab33;
+}
+
+#service .service-list li:nth-of-type(1):hover a:after {
+  background: url("../img/icon-1.png") no-repeat -342px 0;
+}
+
+#service .service-list li:nth-of-type(2):hover a {
+  background-color: #4eba69;
+}
+
+#service .service-list li:nth-of-type(2):hover a:after {
+  background: url("../img/icon-1.png") no-repeat -116px -94px;
+}
+
+#service .service-list li:nth-of-type(3):hover a {
+  background: #f3c600;
+}
+
+#service .service-list li:nth-of-type(3):hover a:after {
+  background: url("../img/icon-1.png") no-repeat -174px -94px;
+}
+
+#service .service-list li:nth-of-type(4):hover a {
+  background: #6bc5eb;
+}
+
+#service .service-list li:nth-of-type(4):hover a:after {
+  background: url("../img/icon-1.png") no-repeat -58px -94px;
 }
