--- a/src/css/style-index.less
+++ b/src/css/style-index.less
@@ -3,7 +3,10 @@
 @import "lib-reset";
 
 /* Import lib-rem.less if supportREM opened. */
-// @import "lib-rem";
+ @import "lib-rem";
 
 
-@import "lib-common";
+
+
+//首页
+@import "pages/index";
