--- a/src/css/pages/index.less
+++ b/src/css/pages/index.less
@@ -9,6 +9,7 @@
     figcaption {
       h3 {
         .pos-r;
+        .m-auto;
         .font(28px, "微软雅黑", 400);
         .border-bottom-base(#e1e1e1);
         display: inline-block;
@@ -17,11 +18,26 @@
           .after(70px, 3px);
           background-color: @red;
           top: auto;
-          bottom: -1px;
+          bottom: -2px;
         }
       }
     }
+    &.reversion {
+      figcaption {
+        h3 {
+          color: @white;
+          .border-bottom-base(@white);
+          &:after {
+            background-color: @white;
+          }
+        }
+      }
+      p {
+        color: @white;
+      }
+    }
   }
+  //更多
   .more {
     display: inline-block;
     & > a {
@@ -33,7 +49,7 @@
       .mt(4px);
       .ml(5px);
       color: @base-color;
-      background: url("@{images}/icon-1.png") no-repeat -474px -26px;
+      background: url("@{images}/icon-1.png") no-repeat -343px -26px;
       display: inline-block;
       width: 14px;
       height: 14px;
@@ -41,15 +57,77 @@
     &:hover {
       text-decoration: underline;
       &:after {
-        background: url("@{images}/icon-1.png") no-repeat -474px  0;
+        background: url("@{images}/icon-1.png") no-repeat -343px  0;
       }
     }
   }
 }
 
+
+//焦点图
+#slide{
+  width: percentage(@half*2);
+  height: 580px;
+  overflow: hidden;
+  .out {
+    position: relative;
+    width: 100%;
+    height: inherit;
+    overflow: hidden;
+  }
+  .out .img li {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: none;
+  }
+  .out .num {
+    position: absolute;
+    bottom: 20px;
+    left: 0;
+    font-size: 0;
+    width: percentage(@half*2);
+    text-align: center;
+  }
+  .out .num li {
+    width: 12px;
+    height: 12px;
+    display: inline-block;
+    font-size: 16px;
+    background-color: #fff;
+    color: #fff;
+    text-align: center;
+    line-height: 20px;
+    border-radius: 50%;
+    margin: 0 10px;
+    text-indent: -9999px;
+    cursor: pointer;
+  }
+  .out .num li.active { background-color:@red;}
+  .out .btn {
+    position: absolute;
+    top: 50%;
+    width: 30px;
+    height: 60px;
+    margin-top: -30px;
+    background: rgba(0,0,0,.5);
+    color: #fff;
+    text-align: center;
+    line-height: 60px;
+    font-size: 40px;
+    display: none;
+  }
+  .out:hover .btn{
+    display: block;
+    cursor: pointer;
+  }
+  .out .left { left: 0;}
+  .out .right { right: 0;}
+}
+
 //服务
 #service {
-  background-color: rgba(248, 248, 248, 1);;
+  background-color: rgba(248, 248, 248, 1);
   .list-inline(left, 0);
   .service-list {
     .pos-r;
@@ -97,19 +175,19 @@
       }
       &:nth-of-type(1) a:after {
         .after(56px, 56px);
-        background: url("@{images}/icon-1.png") no-repeat -232px -94px;
+        background: url("@{images}/icon-1.png") no-repeat -174px -152px;
       }
       &:nth-of-type(2) a:after {
         .after(56px, 56px);
-        background: url("@{images}/icon-1.png") no-repeat -290px -94px;
+        background: url("@{images}/icon-1.png") no-repeat 0 -152px;
       }
       &:nth-of-type(3) a:after {
         .after(56px, 56px);
-        background: url("@{images}/icon-1.png") no-repeat 0px -94px;
+        background: url("@{images}/icon-1.png") no-repeat -58px -152px;
       }
       &:nth-of-type(4) a:after {
         .after(56px, 56px);
-        background: url("@{images}/icon-1.png") no-repeat -348px -58px;
+        background: url("@{images}/icon-1.png") no-repeat -116px -152px;
       }
 
       //服务图标交互
@@ -123,7 +201,7 @@
         a {
           background-color: #f6ab33;
           &:after {
-            background: url("@{images}/icon-1.png") no-repeat -342px 0;
+            background: url("@{images}/icon-1.png") no-repeat -174px -94px;
           }
         }
       }
@@ -134,7 +212,7 @@
         a {
           background-color: #4eba69;
           &:after {
-            background: url("@{images}/icon-1.png") no-repeat -116px -94px;
+            background: url("@{images}/icon-1.png") no-repeat 0 -94px;
           }
         }
       }
@@ -145,7 +223,7 @@
         a {
           background: #f3c600;
           &:after {
-            background: url("@{images}/icon-1.png") no-repeat -174px -94px;
+            background: url("@{images}/icon-1.png") no-repeat -58px -94px;
           }
         }
       }
@@ -156,7 +234,7 @@
         a {
           background: #6bc5eb;
           &:after {
-            background: url("@{images}/icon-1.png") no-repeat -58px -94px;
+            background: url("@{images}/icon-1.png") no-repeat -116px -94px;
           }
         }
       }
@@ -175,19 +253,144 @@
 //成功案例
 #project {
   .project-list {
+    .pt(60px);
+    .pb(60px);
+    .toTable;
     & > ul {
-      .pt(60px);
-      .pb(60px);
-      .list-inline;
-      height: auto;
-      overflow: hidden;
-      width: percentage(@half*2);
+      display: table-row;
     }
     li {
-      img {
-        display: block;
-        max-width: percentage(@half*2);
+      .pos-r;
+      width: percentage(0.2);
+      max-height: 300px;
+      display: table-cell;
+      .show-img {
+        img {
+          display: block;
+          max-width: percentage(@half*2);
+        }
+      }
+      .mask {
+        .pos-a;
+        color: @white;
+        display: none;
+        padding: 20px 30px;
+        box-sizing: border-box;
+        top: 0;
+        left: 0;
+        background: rgba(0, 0, 0, .7);
+        width: percentage(@half*2);
+        height: percentage(@half*2);
+        label {
+          display: block
+        }
+        & > label {
+          .mb(50px);
+          font-size: 18px;
+        }
+        .text {
+          width: percentage(@half*2);
+          & > label {
+            .text-center;
+            font-size: 22px;
+          }
+
+          & > p {
+            height: 65px;
+            text-indent: 2em;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            display: -webkit-box;
+            -webkit-line-clamp: 3;
+            -webkit-box-orient: vertical;
+          }
+          & > .link {
+            .pos-a;
+            .text-right;
+            width: percentage(@half*2);
+            height: 28px;
+            right: 30px;
+            bottom: 0;
+            a {
+              width: 28px;
+              height: 28px;
+              display: inline-block;
+              background: url("@{images}/icon-1.png") no-repeat -203px -210px;
+            }
+          }
+        }
+      }
+      &:hover .mask {
+        //display: block;
       }
     }
   }
 }
+
+//新闻
+#news {
+  background-color: rgba(248, 248, 248, 1);
+}
+
+
+//关于我们
+#aboutUs {
+  background-color: rgba(203, 183, 162, 1);
+  & > .box {
+    .pos-r;
+    display: block;
+    background: url("@{images}/aboutUs-people-show.png") no-repeat 0 center;
+    height: 600px;
+    & > .arrow {
+      .pos-a;
+      .text-right;
+      .pr(10px);
+      .mt(-30px);
+      color: #412106;
+      width: 100px;
+      height: 60px;
+      line-height:60px;
+      top: 50%;
+      right: 0;
+      letter-spacing: -15px;
+      z-index: 99;
+      .font(60px, "AvenirLTStd-Black", 800);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-color: #412106;
+      background-image: -webkit-linear-gradient(-45deg, rgba(0, 0, 0, 0.6) 30%, #f9cf93 50%, rgba(0, 0, 0, 0.6) 70%); /*设置渐变的背景，按对角线渐变*/
+
+      background-blend-mode: hard-light; /*设置背景为混合模式下的强光模式*/
+      background-size: 240%;
+      -webkit-animation: shine 3s infinite;
+    }
+  }
+
+  @-webkit-keyframes shine {
+    from {
+      background-position: 100%;
+    }
+    to {
+      background-position: 0;
+    }
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
